# ait-organizers-app

./: .gitignore  CLAUDE.md  PRD.md  README.md  index.html  package.json  popover.html  tsconfig.json  vite.config.ts
design/: BRAND.md  DESIGN.md  README.md  brand.json  mission-control.html
design/fonts/: fonts.css  manifest.json
design/tokens/: theme.json  tokens.compact.json  tokens.dark.json  tokens.default.json  variables.css  variables.dark.css
docs/: agents-api.md
images/: ai_tinkerers_laptop-sticker_190_36f8a1b323d10b4be8650558238adf1d (1).avif  ai_tinkerers_laptop-sticker_190_36f8a1b323d10b4be8650558238adf1d.avif  logo-png-mfNX.avif
openapi/: openapi.yaml
openspec/changes/add-attendance-checkin/: design.md  proposal.md  tasks.md
openspec/changes/add-email-lifecycle-monitor/: design.md  proposal.md  tasks.md
openspec/changes/add-event-mission-control-v1/: proposal.md
openspec/changes/add-event-page-rsvp-view/: design.md  proposal.md  tasks.md
openspec/changes/add-media-video-kit/: design.md  proposal.md  tasks.md
scripts/: build-macos.sh  refresh-openapi.ts
src/: api.ts  main.ts  popover.ts  styles.css  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  db.rs  error.rs  keychain.rs  lib.rs  main.rs  state.rs  sync.rs  write_guard.rs
src/screens/: checkin.ts  detail.ts  email.ts  media.ts  networking.ts  onboarding.ts  overview.ts  promote.ts  screening.ts  settings.ts  speakers.ts  sponsors.ts
(+73 files in other folders)
